# audiobook-dl-web

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  renovate.json  start.ps1  start.sh
.github/workflows/: ci.yml
app/: config_manager.py  download_manager.py  main.py  output_processor.py  routes.py  services.py  utils.py
app/static/: download.js  style.css  theme.js
app/templates/: base.html  configure.html  download.html  index.html  settings.html
tests/: test_config_manager.py  test_download_manager.py  test_output_processor.py
